hw/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: otus-service
spec:
  selector:
    app: savimar-demo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 9090
  type: NodePort
