hw/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: otus-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /(.*)
          backend:
            serviceName: otus-service
            servicePort: 8080
